--- a/style/about.css
+++ b/style/about.css
@@ -38,6 +38,31 @@ article {
 }
 
 */
+    
+    #home a:hover {
+        border-collapse: collapse;
+        border: 3px solid mediumspringgreen;
+    }
+    
+    #project1 a:hover {
+        border-collapse: collapse;
+        border: 3px solid #c394f8;
+    }
+    
+    #project2 a:hover {
+        border-collapse: collapse;
+        border: 3px solid #c8f4d5;
+    }
+    
+    #project3 a:hover {
+        border-collapse: collapse;
+        border: 3px solid #cceeff;
+    }
+    
+    #aboutme a:hover {
+        border-collapse: collapse;
+        border: 3px solid lightpink;
+    }
     /********************************BACKGROUND****************************/
     
     .about {
@@ -168,7 +193,7 @@ article {
         border: 1px solid black;
         box-shadow: 1px 1px 1px black;
         padding-top: 2px;
-        padding-bottom: 2px;
+        padding-bottom: px;
         padding-right: 25px;
         padding-left: 25px;
         align-items: center;
